--- a/app/templates/create_checkup.html
+++ b/app/templates/create_checkup.html
@@ -1,8 +1,8 @@
 {% macro render_input(for_label, label_text, input_type, placeholder="", disabled=False) -%}
 <label for="{{for_label}}" class="d-block h5 mt-3">{{label_text}}:</label>
-<input type="{{input_type}}" class="form-control form-control-md" placeholder="{{placeholder}}" id="{{for_label}}" {% if disabled disabled %}>
+<input type="{{input_type}}" class="form-control form-control-md" placeholder="{{placeholder}}" id="{{for_label}}">
 {%- endmacro -%}
-{% extends 'layout/home.html' %}
+{% extends 'layout\home.html' %}
 {% block page_content %}
 <div class="container-fluid d-flex flex-column">
     <div class="text-center">
@@ -11,6 +11,7 @@
     <form action="post" class="mt-2 ml-5">
         <div class="form-group">
             {{ render_input("checkupDate", "Checkup Date", "date", disabled=True)}}
+            {{ render_input("patientName", "Patient Name", "text", placeholder="Enter patient name...")}}
             <div class="form-check p-0">
                 <label for="male" class="d-block h5 mt-3">Sex:
                     <input type="radio" name="sex" id="male" class="ml-1" id="radio-1">
@@ -19,9 +20,36 @@
                     <label for="female" class="col-form-label-sm">Female</label>
             </div>
             {{ render_input("birthDate", "Birth Date", "date")}}
+        </br>
+            <div class="row">
+                <div class="col">
+                    <label for="weight" class="form-label">Weight:</label>
+                    <input type="text" class="form-control" placeholder="..." name="weight">
+                </div>
+                <div class="col">
+                    <label for="height" class="form-label">Height:</label>
+                    <input type="text" class="form-control" placeholder="..." name="height">
+                </div>
+                <div class="col">
+                    <label for="blood-pressure" class="form-label">Blood Pressure:</label>
+                    <input type="text" class="form-control" placeholder="..." name="blood-pressure">
+                </div>
+            </div>
+            
+            <div class="mb-3 mt-3">
+                <label for="symptom" class="form-label">Symptom:</label>
+                <input type="text" class="form-control" id="symptom" placeholder="Enter symptoms..." name="symptom">
+            </div>
+            
+            <label for="diagnosis">Diagnosis:</label>
+                <textarea class="form-control" rows="4" id="diagnosis" name="diagnosis"></textarea>
+
+            
+
             <div class="text-center">
                 <button class="btn btn-primary mt-5 pl-5 pr-5 mx-auto">POST</button>
             </div>
+            
         </div>
     </form>
 
